assets/css/app.css
/* ... */
.chain-btn.btn {
background: #D62C35;
border-radius: 0px;
padding: 20px;
font-size: 20px;
color: #fff;
font-weight: 100;
transition:background-color .3s ease;
width:100%;
}

.chain-btn.btn:hover {background: #DD464E;}

.submit-btn h3{
font-size: 26px;
font-weight: 100;
}

.submit-btn {
background: #F37512;
border-radius: 0px;
width:100%;
}

.submit-btn:hover {
background: #F39437;}

.btn-container {
display: inline-block;
}

.MyZebra_Form input.myzebra-password, .MyZebra_Form input.myzebra-text, .MyZebra_Form select, .MyZebra_Form textarea {
padding: 6px 5px 5px 5px;
border: none!important;
}
.myzebra-terms{
   display: none!important;
}
.cred-label{
   display: none;
}
.cred-taxonomy-auxilliary{
   display: none;
}
form#cred_form_661_1 {
display: inline-block;
}
input.myzebra-text {
width: 200px!important;
}
#submit-panel,.submit-panel, .submit-panel-btn {
background-color: #F37717;
min-height: 100px;
border: 0px;
outline: none!important;
}
.panel-body {
text-align: center;
}
.panel{
   border: 0px;
   border-radius: 0px!important;
}
.MyZebra_Form input.myzebra-password, .MyZebra_Form input.myzebra-text, .MyZebra_Form input[type="text"] {
height: 25px;
border-radius: 5px;
background: #fff;
margin-top: 3px;
}

.MyZebra_Form div.myzebra-form-message {
border: none!important;
background: transparent!important;
position: relative!important;
overflow: hidden!important;
background-image: none!important;
height: 30px!important;
position: absolute!important;
top: 0px!important;
right: 10px!important;
width: 240px!important;
}

.tag-chain p {
color: #fff;
margin-bottom: 0px;
padding-left: 0px;
}

.tag-chain i{
padding: 8px 0px 0px 10px;
color: #fff;
}

.home .tag-btn:hover, .home .tag-btn:hover .btn, .tag-btn .btn-primary:hover, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
color: #fff;
background-color: #C0202B;
border-color: #C0202B;
}
.home .tag-btn{
   background: #B7B7B7;
}

.myzebra-recaptcha {width:320px; margin:0px auto!important;}

.recaptcha_only_if_privacy {
text-align: right;
display: none;
}

.cred-taxonomy {margin-bottom:15px;}


/* REMOVE AFTER AUGUST 20TH */
.submissions-closed {
padding: 5px;
font-size: 15px;
color: #F3C2C2;
font-weight: 300;
line-height: 1.3;
}

input#cred_form_661_1_form_submit_1, #cred_form_504_2_form_submit_2 {display:none;}

a.myzebra-add-new-term {
background-color: #F69143!important;
border: none;
border-radius: 5px!important;
color: #fff!important;
font-weight: 200;
margin-top: 3px;
font-size: 14px!important;
padding: 5px 10px!important;
margin-left: 3px;
display: inline-block;
}

.home-events {
   background: #F0F0F0;
   padding: 25px 10%;
   font-weight: 100;
   color: #000;
}

.home-events p{
   font-size: 22px;
}

.home-events h1{
   font-size: 54px;
   color: #C0202B;
   font-weight: 100;
}

.btn-default {
color: #fff;
font-weight: 100;
background-color: #C0202B;
border: none;
border-radius: 0;
}

.home-events .btn-default {
font-size: 24px;
transition: background-color .3s ease, color .3s ease;
width: 100%;
text-align: center;
}

.btn-primary {
font-weight: 100;
font-size: 14px;
width: 100%;
background: #B7B7B7;
border: transparent!important;
border-radius: 0px!important;
height: 30px;
}

.tag-btn button {
padding: 30px 0;
}


/* ----- Home News Section ----- */

.home-news a h4 {
color: #BF2129;
font-weight: 100;
font-size: 35px;
}

.home-news h5 {
font-size: 22px;
font-weight: 100;
}

.home-news-main {padding: 7% 0;}

p.date {
color: #7e7e7e!important;
text-transform: uppercase!important;
font-size: 13px!important;
}

.home-news p {
color: #000000;
font-size: 18px;
}

.home-news a {
color: #BF2129;
text-transform: uppercase;
}


.home-news .col-sm-4 .img-container {padding-bottom: 100%;} /* Featured post */
.home-news .news-item .img-container {padding:25%; }
.thank-you {text-align: center; margin:0px auto;}
/* ==========================================================================
   ABOUT
   ========================================================================== */

.about-body-copy {
font-size: 15px;
font-weight: 300;
line-height: 1.5;	
margin:3% 0;
}

body.about .container {
margin: 0 auto!important;
}

.about-body-copy h1 {
font-size: 52px;
font-weight: 100;
color: #ac3234;
}

/* ==========================================================================
   NEWS (reel)
   ========================================================================== */

.news-grid {margin:0 auto;margin-top:3%!important;}
body.blog .img-container {padding-bottom: 70%;}
.news-grid h2 {
color: #ac3234;
font-size: 32px;
font-weight: 100;
height: 65px;
overflow: hidden;
}
.news-grid a p {font-size: 16px;color:#707070;margin-top: 3%;}
.border-only {border: 1px solid #E0E0E0;padding: 1%;margin-bottom:10%;min-height: 411px;}
.continue-div {
transition: background-color .3s ease;
text-align: right;
display: table-caption;
}

.continue-div:hover {background-color:#ECECEC; }
a.continue {color: #ac3234;font-weight: bold;}

body.blog .news-excerpt {height:75px; overflow:hidden;}

/* ----- Individual Posts ----- */

body.single-post article {margin-top: 30px;}
body.single-post {font-size: 16px;line-height: 1.5em;font-weight: 300;}


/* ==========================================================================
   CHAIN SINGLE
   ========================================================================== */
   
.vid-container > img {margin: 0 auto;}
.chain-info {text-align: center;}
body.single-chains .date {display: none;}
.chains {margin-top: 3%;}

body.single-chains .entry-content h1 {
color: #303030;
font-size: 62px;
font-weight: 100;
margin-bottom: 5%;
margin-top: 5%;
}

.chain-info {font-size: 18px;}
body.single-chains .col-sm-6.col-sm-offset-3 {text-align: center;}

.tag-and-view h4{
font-weight: 100!important;
font-size: 23px!important;
color: #fff!important;
margin: 0px;
}
.modal .tag-and-view {

}
/* ... */

